manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sovannlyna-ui-mastervv-service
spec:
  type: NodePort
  selector:
    app: sovannlyna-ui-mastervv
  ports:
    - protocol: TCP
      port: 8134
      targetPort: 3000
